[chromium] Set default memory allocation limit bytes when GL_CHROMIUM_gpu_memory_manager is not supported by graphics context. https://bugs.webkit.org/show_bug.cgi?id=87996

Patch by Michal Mocny <mmocny@google.com> on 2012-06-05
Reviewed by James Robinson.

Soon we hope to have renderers not manage there own memory allocation limits, and rely exclusively on the
allocation given by GpuMemoryManager.  However, when the graphics context does not support the
GL_CHROMIUM_gpu_memory_manager extension, such as the one used by DumpRenderTree, we must default the
memory allocation limit to some non-0 value.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::initialize):
* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::postSetContentsMemoryAllocationLimitBytesToMainThreadOnImplThread):
* platform/graphics/chromium/cc/CCSingleThreadProxy.h:
(WebCore):
(DebugScopedSetMainThreadFromEither):
(WebCore::DebugScopedSetMainThreadFromEither::DebugScopedSetMainThreadFromEither):
(WebCore::DebugScopedSetMainThreadFromEither::~DebugScopedSetMainThreadFromEither):

Canonical link: https://commits.webkit.org/106216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119554 268f45cc-cd09-0410-ab3c-d52691b4dbfc